<?xml version="1.0" encoding="utf-8"?>
<!--
    **********************************************************
    * REALISE PAR : Mouad Charraj aka Z3R0-XR7
    * MODULE      : Interface de Calcul Lab2
    **********************************************************
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root_mouad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_conteneur_mouad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/input_surface_mouad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surface"
            android:inputType="numberDecimal"
            android:autofillHints="none"
            android:padding="12dp" />

        <EditText
            android:id="@+id/input_pieces_mouad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pieces"
            android:inputType="number"
            android:autofillHints="none"
            android:layout_marginTop="10dp"
            android:padding="12dp" />

        <CheckBox
            android:id="@+id/check_piscine_mouad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_piscine"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_calculer_mouad"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/button_calculer"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/txt_resultat_mouad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center" />

    </LinearLayout>

    <!-- Signature fixe en bas de l'écran par Mouad Charraj -->
    <TextView
        android:id="@+id/txt_signature_mouad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signature_mouad"
        android:textSize="12sp"
        android:layout_marginBottom="16dp"
        android:alpha="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>